--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </div>
           </li>
         </ul>
+        <!-- navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
     </section>
     <script type="text/javascript" src="./index.js"></script>
   </body>
